compiler/tests/should-pass/code-generation/aby/ClearArrayIndex1.via
host alice : {A}
host bob   : {A}

fun main() {
    let $first@Local(host = alice) = input int from alice;
    let $second@Local(host = bob) = input int from bob;

    let $firstYao@YaoABY(client = bob, server = alice) = $first;
    let $secondYao@YaoABY(client = bob, server = alice) = $second;

    val x = Array[int]@YaoABY(client = bob, server = alice)(2);
    x[0] = $firstYao;
    x[1] = $secondYao;
}
