compiler/tests/should-fail/TooFewArguments.via
/* IncorrectNumberOfArgumentsError */

fun main() {
    val x = Array[int](5);
    assert x == 0;
}
